Fix layout issues

--- a/jbi100_app/assets/00-style.css
+++ b/jbi100_app/assets/00-style.css
@@ -45,8 +45,8 @@ body {
     "metrics plot plot map"
     "metrics plot plot ranking"
     "metrics info-left info-right ranking";
-    grid-template-columns: 0.6fr 1fr 1fr 1fr;
-    grid-template-rows: 2fr 1fr 3fr;
+    grid-template-columns: 0.55fr 1fr 1fr 1fr;
+    grid-template-rows: 1.8fr 1fr 2.8fr;
     width: 100vw;
     height: 100vh;
     gap: 10px;
